// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Dropdown - renders 1`] = `
<div
  className="dropdown anchor-top-left"
  data-disable-default-keyboard-nav={null}
  id={null}
>
  

  <div
    className="toggle-menu-container"
  >
    

    <button
      aria-label="dropdown button"
      className="dropdown-toggle"
      type="button"
    >
      

      <span>
        Default label
      </span>
      

      <i
        aria-hidden="true"
        className="swepay-icon-chevron-down"
      />
      

    </button>
    

    <div
      aria-labelledby="dropdownToggle"
      className="dropdown-menu"
    >
      

    </div>
  </div>
</div>
`;

exports[`Component: Dropdown - renders children components passed as content prop inside the menu list 1`] = `
<div
  className="dropdown anchor-top-left"
  data-disable-default-keyboard-nav={null}
  id={null}
>
  

  <div
    className="toggle-menu-container"
  >
    

    <button
      aria-label="dropdown button"
      className="dropdown-toggle dropdown-toggle-icon"
      type="button"
    >
      

      <i
        aria-hidden="true"
        className="sort"
      />
      

    </button>
    

    <div
      aria-labelledby="dropdownToggle"
      className="dropdown-menu p-3"
    >
      

      <a
        href="#"
      >
        <i
          aria-hidden="true"
          className="at-bookmark-star"
        />
        Edit
      </a>
    </div>
  </div>
</div>
`;

exports[`Component: Dropdown - renders error state with the error icon and an error text 1`] = `
<div
  className="dropdown anchor-top-left has-error"
  data-disable-default-keyboard-nav={null}
  id={null}
>
  

  <div
    className="toggle-menu-container"
  >
    

    <button
      aria-label="dropdown button"
      className="dropdown-toggle"
      type="button"
    >
      

      <span>
        Default label
      </span>
      

      <i
        aria-hidden="true"
        className="swepay-icon-chevron-down"
      />
      

    </button>
    

    <div
      aria-labelledby="dropdownToggle"
      className="dropdown-menu"
    >
      

    </div>
  </div>
  <div
    className="help-block"
  >
    <i
      aria-hidden="true"
      className="swepay-icon-error-triangle-filled small"
    />
    test error message
  </div>
  

</div>
`;

exports[`Component: Dropdown - renders the toggle button with the icon being either before or after the icon is after the text 1`] = `
<div
  className="dropdown anchor-top-left"
  data-disable-default-keyboard-nav={null}
  id={null}
>
  

  <div
    className="toggle-menu-container"
  >
    

    <button
      aria-label="dropdown button"
      className="dropdown-toggle"
      type="button"
    >
      

      <span>
        Filter
      </span>
      

      <i
        aria-hidden="true"
        className="icon-test"
      />
      

    </button>
    

    <div
      aria-labelledby="dropdownToggle"
      className="dropdown-menu"
    >
      

    </div>
  </div>
</div>
`;

exports[`Component: Dropdown - renders the toggle button with the icon being either before or after the icon is before the text 1`] = `
<div
  className="dropdown anchor-top-left"
  data-disable-default-keyboard-nav={null}
  id={null}
>
  

  <div
    className="toggle-menu-container"
  >
    

    <button
      aria-label="dropdown button"
      className="dropdown-toggle"
      type="button"
    >
      

      <i
        aria-hidden="true"
        className="icon-test"
      />
      

      <span>
        Filter
      </span>
      

    </button>
    

    <div
      aria-labelledby="dropdownToggle"
      className="dropdown-menu"
    >
      

    </div>
  </div>
</div>
`;

exports[`Component: Dropdown - renders the toggle button, when passing with specific label and custom icon props 1`] = `
<div
  className="dropdown anchor-top-left"
  data-disable-default-keyboard-nav={null}
  id={null}
>
  

  <div
    className="toggle-menu-container"
  >
    

    <button
      aria-label="dropdown button"
      className="dropdown-toggle"
      type="button"
    >
      

      <span>
        Filter
      </span>
      

      <i
        aria-hidden="true"
        className="icon-test"
      />
      

    </button>
    

    <div
      aria-labelledby="dropdownToggle"
      className="dropdown-menu"
    >
      

    </div>
  </div>
</div>
`;

exports[`Component: Dropdown - renders, when passing no label nor icon props, a toggle button set as secondary button with a chevron icon 1`] = `
<div
  className="dropdown anchor-top-left"
  data-disable-default-keyboard-nav={null}
  id={null}
>
  

  <div
    className="toggle-menu-container"
  >
    

    <button
      aria-label="dropdown button"
      className="dropdown-toggle"
      type="button"
    >
      

      <span>
        Default label
      </span>
      

      <i
        aria-hidden="true"
        className="swepay-icon-chevron-down"
      />
      

    </button>
    

    <div
      aria-labelledby="dropdownToggle"
      className="dropdown-menu"
    >
      

    </div>
  </div>
</div>
`;

exports[`Component: Dropdown - the toggle icon btn with and without a passed icon renders the toggle btn as icon btn with no icon passed has a default of the three vertical dots icon 1`] = `
<div
  className="dropdown anchor-top-left"
  data-disable-default-keyboard-nav={null}
  id={null}
>
  

  <div
    className="toggle-menu-container"
  >
    

    <button
      aria-label="dropdown button"
      className="dropdown-toggle dropdown-toggle-icon"
      type="button"
    >
      

      <i
        aria-hidden="true"
        className="at-dots-vertical"
      />
      

    </button>
    

    <div
      aria-labelledby="dropdownToggle"
      className="dropdown-menu"
    >
      

    </div>
  </div>
</div>
`;

exports[`Component: Dropdown - the toggle icon btn with and without a passed icon renders the toggle btn as icon btn with the icon passed as props 1`] = `
<div
  className="dropdown anchor-top-left"
  data-disable-default-keyboard-nav={null}
  id={null}
>
  

  <div
    className="toggle-menu-container"
  >
    

    <button
      aria-label="dropdown button"
      className="dropdown-toggle dropdown-toggle-icon"
      type="button"
    >
      

      <i
        aria-hidden="true"
        className="sort"
      />
      

    </button>
    

    <div
      aria-labelledby="dropdownToggle"
      className="dropdown-menu"
    >
      

    </div>
  </div>
</div>
`;
